
Reverted part of a patch from Chris Schoeneman <crs23@bigfoot.com>
(changelog entry "Fri Jun 25 17:48:24 2004") which broke dead keys and
compose-key sequences.

Fixed autoSHIT for dist/distcheck/distclean/maintainer-clean and newer
autoSHIT versions.

Fixed error in saving of cut_chars attribute.

Fixed saving/handling of beep_command attribute.
----------------------------------------------------------------------
Mon Apr 18 16:00:22 2005                        Michael Jennings (mej)

Remove unused NO_XLOCALE crap and do it right.
----------------------------------------------------------------------
Mon Apr 18 18:00:17 2005                        Michael Jennings (mej)

Applied a patch from Fredrik Svensson <fred@ludd.ltu.se> for 256-color
support (a la xterm).  I also renamed and imported a couple of his
test scripts into utils/, and in playing around with them, I found and
fixed an X server resource leak.  Use Etpalette to view the 256-color
palette.
----------------------------------------------------------------------
Mon Apr 18 21:49:08 2005                        Michael Jennings (mej)

Re-indent code.
----------------------------------------------------------------------
Mon Apr 18 22:11:22 2005                        Michael Jennings (mej)

Patch from C. David Wilde <cdw@mylinuxguy.com> to correct the non-MMX
color modifier routines.
----------------------------------------------------------------------
Wed Apr 20 19:07:38 2005                    Michael Frysinger (vapier)

Patch from Tres <tres@mindspring.com> to fix window manager hints on 
64bit systems.  http://bugs.gentoo.org/show_bug.cgi?id=76324
----------------------------------------------------------------------
Mon Apr 25 15:34:49 2005                        Michael Jennings (mej)

Added --enable-escreen-fx flag to ./configure to enable/disable the
Escreen startup effects (bosconian, matrix, etc.).

Fixed some warnings.
----------------------------------------------------------------------